opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/http-lwt-client"
dev-repo: "git+https://github.com/robur-coop/http-lwt-client.git"
bug-reports: "https://github.com/robur-coop/http-lwt-client/issues"
license: "BSD-3-clause"

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.0.0"}
  "logs"
  "miou"
  "ke"
  "httpaf" {>= "0.7.0"}
  "tls" {>= "0.16.0"}
  "fmt"
  "h2" {>= "0.10.0"}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "A simple HTTP client using http/af, h2, and miou"
