opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/http-lwt-client"
dev-repo: "git+https://github.com/robur-coop/http-lwt-client.git"
bug-reports: "https://github.com/robur-coop/http-lwt-client/issues"
license: "BSD-3-clause"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "cmdliner" {>= "1.1.0"}
  "logs"
  "lwt"
  "base64" {>= "3.1.0"}
  "faraday-lwt-unix"
  "httpaf" {>= "0.7.0"}
  "tls" {>= "0.16.0"}
  "tls-lwt" {>= "0.16.0"}
  "ca-certs"
  "fmt"
  "bos"
  "happy-eyeballs-lwt"
  "stringext"
  "h2" {>= "0.10.0"}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "A simple HTTP client using http/af, h2, and lwt"
